Simplify the Makefile

--- a/solution2/Makefile
+++ b/solution2/Makefile
@@ -3,7 +3,6 @@ CLANG ?= clang$(LLVM_SUFFIX)
 # MAIN_LL = main1.ll
 MAIN_LL = main2.ll
 MAIN_S = main.s
-MAIN_TEMP_S = main_temp.s
 MAIN_EXE = main.exe
 RUNTIME = runtime/rt.a
 
@@ -15,10 +14,7 @@ $(MAIN_EXE): $(RUNTIME) $(MAIN_S)
 $(RUNTIME):
 	$(MAKE) -C runtime all
 
-$(MAIN_S): $(MAIN_TEMP_S)
-	sed -e "s/__LLVM_StackMaps:/.globl __LLVM_StackMaps\n__LLVM_StackMaps:/" $< >$@
-
-$(MAIN_TEMP_S):
+$(MAIN_S):
 	$(CLANG) $(MAIN_LL) -S -o $@
 
 clean:
