Delete unwanted files

--- a/solution2/Makefile
+++ b/solution2/Makefile
@@ -1,7 +1,6 @@
 LLVM_SUFFIX=-11
 CLANG ?= clang$(LLVM_SUFFIX)
-# BAL_LL = bal1.ll
-BAL_LL = bal2.ll
+BAL_LL = bal.ll
 BAL_S = bal.s
 MAIN_EXE = main.exe
 RUNTIME = runtime/rt.a
