Simplify the make file

--- a/solution2/Makefile
+++ b/solution2/Makefile
@@ -1,21 +1,17 @@
 LLVM_SUFFIX=-11
 CLANG ?= clang$(LLVM_SUFFIX)
 BAL_LL = bal.ll
-BAL_S = bal.s
 MAIN_EXE = main.exe
 RUNTIME = runtime/rt.a
 
 all: $(MAIN_EXE)
 
-$(MAIN_EXE): $(RUNTIME) $(BAL_S)
-	$(CLANG) $(BAL_S) $< -lm -L ../third-party/libbacktrace/.libs -lbacktrace -o $@ 
+$(MAIN_EXE): $(RUNTIME)
+	$(CLANG) $(BAL_LL) $< -lm -L ../third-party/libbacktrace/.libs -lbacktrace -o $@ 
 
 $(RUNTIME):
 	$(MAKE) -C runtime all
 
-$(BAL_S):
-	$(CLANG) $(BAL_LL) -S -o $@
-
 clean:
-	-rm -f $(MAIN_EXE) $(BAL_S)
+	-rm -f $(MAIN_EXE)
 	$(MAKE) -C runtime clean
